v1.2.0
======

IMPORTANT INCLUSIONS

* com.github.qacore.testingtoolbox.selenium.parallel.ManagedWebDriverContext

IMPORTANT INCLUSIONS (Selenium HTML 5 Support)

* com.github.qacore.testingtoolbox.selenium.html5.JSLocalStorage
* com.github.qacore.testingtoolbox.selenium.html5.JSApplicationCache
* com.github.qacore.testingtoolbox.selenium.html5.JSSessionStorage

IMPORTANT CHANGES

* Moved com.github.qacore.testingtoolbox.patterns.pageobjects.* to com.github.qacore.testingtoolbox.selenium.support.pageobjects.*

OTHER INCLUSIONS

* com.github.qacore.testingtoolbox.junit.runners.ParallelParameterized.TEST_THREADS_COUNT

OTHER CHANGES

* Now AbstractPageObjects extends ManagedWebDriverContext

v1.1.2 (2017-06-12)
======

IMPORTANT CHANGES

* Now ParallelScheduler is public.

v1.1.1 (2017-06-09)
======

IMPORTANT CHANGES

* Now PageObjects.getWrappedDriver() uses WebDriverManager.getDriver() as default interface.

v1.1.0 (2017-06-07)
======

IMPORTANT CHANGES

* Rename com.github.qacore.testingtoolbox.junit.runners.ParameterizedParallel to com.github.qacore.testingtoolbox.junit.runners.ParallelParameterized
* Rename parallelTestThreadsPerCore property to toolbox.parallelTestThreadsPerCore

IMPORTANT INCLUSIONS (Junit commons categories)

* com.github.qacore.testingtoolbox.junit.categories.*

ANOTHER INCLUSIONS

* com.github.qacore.testingtoolbox.annotations.Tag

v1.0.0 (2017-06-05)
======

IMPORTANT INCLUSIONS (JUnit parallel runners)

* com.github.qacore.testingtoolbox.junit.runners.EnclosedParallel
* com.github.qacore.testingtoolbox.junit.runners.Parallel
* com.github.qacore.testingtoolbox.junit.runners.ParallelCategories
* com.github.qacore.testingtoolbox.junit.runners.ParallelSuite
* com.github.qacore.testingtoolbox.junit.runners.ParameterizedParallel

IMPORTANT INCLUSIONS (WebDriver)

* com.github.qacore.testingtoolbox.managers.WebDriverManager

IMPORTANT INCLUSIONS (Page Object pattern)

* com.github.qacore.testingtoolbox.patterns.pageobjects.LoginPageObjects